<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FilmAR</string>
    <string name="action_plans">Plans</string>
    <string name="action_recommendations">Recommendations</string>
    <string name="action_films">Films</string>
    <string name="add_film_to_plan">Add to plan</string>
    <string name="join_plan">Join plan</string>
    <string name="quit_plan">Quit plan</string>
    <string name="film_description">Synopsis</string>
    <string name="film_genre">Genre</string>
    <string name="film_director">Director</string>
    <string name="plan_created">Plan created</string>
    <string name="submit">Submit</string>
    <string name="plan">Plan</string>
    <string name="plan_date">Date</string>
    <string name="plan_duration">Duration</string>
    <string name="plan_users">Users</string>
    <string name="plan_location">Location</string>
    <string name="plan_description">Description</string>
    <string name="plan_joined">You joined the plan</string>
    <string name="plan_quit">You quit the plan</string>
    <string name="date_format">YYYY-MM-DD</string>
    <string name="form_not_filled">Fill all content before submit</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="login_fail">User or password incorrect</string>
    <string name="register_success">User successfully created</string>
    <string name="user_name">Nickname</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_session">Session</string>
    <string name="logout">Logout</string>
    <string name="no_rating">Click for rate</string>
    <string name="rated_film">Film succesfully rated</string>
    <string name="favorite">Like</string>
    <string name="user_film_unfavorite">Film disliked</string>
    <string name="user_film_favourite">Film liked</string>
    <string name="unfavorite">Dislike</string>
    <string name="action_search">Search</string>
    <string name="plan_title">Title</string>
    <string name="action_friends">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="film_recommendations_user">Recommended films</string>
    <string name="film_recommendations_premiere">On premiere</string>
    <string name="film_recommendations_trending">Popular</string>
    <string name="action_delete">Delete</string>
    <string name="plan_deleted">You deleted the plan</string>
    <string name="friend_requesting">Waiting for accept</string>
    <string name="friend_accept">Accept</string>
    <string name="friend_decline">Decline</string>
    <string name="friend_remove">Remove from friends</string>
    <string name="friend_send_request">Send friend request</string>
    <string name="friendship_deleted">Friend removed</string>
    <string name="friendship_accepted">Friend accepted</string>
    <string name="friendship_declined">Friend declined</string>
    <string name="friendship_request_sent">Friend request sent</string>
    <string name="no_wifi">Check your wifi status</string>
    <string name="init_server">At the moment our server is being powered on. Please wait a few moments.</string>
    <string name="saved_film_info">Information</string>
    <string name="film_saved">Film saved</string>
</resources>