<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.CollapsibleToolbar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/film_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:transitionName="film_poster"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.CollapsibleToolbar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/progress_controller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:progressDrawable="@drawable/seekbar_progress"
                android:splitTrack="false"
                android:theme="@style/AppTheme.SeekBar"
                android:thumb="@drawable/seekbar_thumb"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/film_description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_controller" />

            <com.ucm.tfg.views.ExpandableTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_title" />

            <ImageButton
                android:id="@+id/expandable_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                app:layout_constraintRight_toRightOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/film_genre"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expandable_button" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre_title" />

            <TextView
                android:id="@+id/director_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/film_director"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/director_title" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="@dimen/double_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|center|end"
        app:layout_behavior="com.ucm.tfg.views.AnchorVisibilityBehavior">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin"
            android:progressDrawable="@drawable/rating_circular_bar"
            android:rotation="-90"
            app:background="@color/secondaryLightColor"
            app:elevation="@dimen/margin" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/double_margin"
            android:gravity="center"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:maxLines="5"
            android:text="@string/no_rating"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/double_margin"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_anchor="@id/add_to_plan"
        app:layout_anchorGravity="right"
        app:rippleColor="@color/secondaryTextColor"
        app:backgroundTint="@color/secondaryLightColor"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp" />

    <Button
        android:id="@+id/add_to_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/primaryColor"
        android:text="@string/add_film_to_plan"
        android:textColor="@color/primaryTextColor" />

</android.support.design.widget.CoordinatorLayout>